Create gitignore file export/import variable for API Key Make basic form in html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
-<script type="text/javascript" src="script.js"></script>
+    <form method="GET">
+        <label for="searchCity"></label>
+        <input type="text" id="searchCity" name="searchCity" placeholder="Search city...">
+        <button type="submit" name="Submit">Search</button>
+    </form>
+<script type="module" src="script.js"></script>
 </body>
 </html>
