Some styling, basic structure body + function to get data

--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form method="GET">
-        <label for="searchCity"></label>
-        <input type="text" id="searchCity" name="searchCity" placeholder="Search city...">
-        <button type="submit" name="Submit">Search</button>
-    </form>
+    <header>
+        <h1>Weather report</h1>
+    </header>
+    <main>
+        <form method="GET">
+            <label for="searchCity"></label>
+            <input type="text" id="searchCity" name="searchCity" placeholder="Search city...">
+            <button type="submit" name="Submit">Search</button>
+        </form>
+    </main>
+    <footer>
+
+    </footer>
+
 <script type="module" src="script.js"></script>
 </body>
 </html>
