--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         <form method="GET">
             <label for="searchCity"></label>
             <input type="text" id="searchCity" name="searchCity" placeholder="Search city...">
-            <button type="submit" name="Submit">Search</button>
+            
+            <button type="submit" name="Submit">
+                <img src="./img/searchcloud1.png" alt="Search text inside a cloud icon" id="searchcloud">
+            </button>
         </form>
     </main>
     <footer>
-
+        <p>	&copy; your weather reporter Michelle Radomski</p>
     </footer>
 
 <script type="module" src="script.js"></script>
