Add basic weather info + icons + layout styling

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
                 <img src="./img/searchcloud1.png" alt="Search text inside a cloud icon" id="searchcloud">
             </button>
         </form>
+        <section id="forecast-section">
+            <h2>Forecast for next 5 days</h2>
+            <p id="instruction">Search a city to show forecast</p>
+            <h2 id="cityName"></h2>
+            <div class="forecast-container"></div>
     </main>
     <footer>
-        <p>	&copy; your weather reporter Michelle Radomski</p>
+        <p>	&copy; Your weather reporter Michelle Radomski</p>
     </footer>
 
 <script type="module" src="script.js"></script>
