--- a/index.html
+++ b/index.html
@@ -26,11 +26,21 @@
             <p id="instruction">Search a city to show forecast</p>
             <h2 id="cityName"></h2>
             <div class="forecast-container"></div>
+        </section>
+        <section id="chart-section">
+            <h2>Hourly forecast</h2>
+            <p id="instruction">Search a city to show forecast</p>
+            <h2 id="cityName"></h2>
+            <div class="hourly-forecast-container">
+                <canvas id="myChart" width="400" height="400"></canvas>
+            </div>
+        </section>
     </main>
     <footer>
         <p>	&copy; Your weather reporter Michelle Radomski</p>
     </footer>
 
 <script type="module" src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
 </body>
 </html>
