WIP add some basic styling to chart via chart.js

--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
         </form>
         <section id="forecast-section">
             <h2>Forecast for next 5 days</h2>
-            <p id="instruction">Search a city to show forecast</p>
+            <p class="instruction">Search a city to show forecast</p>
             <h2 id="cityName"></h2>
             <div class="forecast-container"></div>
         </section>
         <section id="chart-section">
             <h2>Hourly forecast</h2>
-            <p id="instruction">Search a city to show forecast</p>
             <h2 id="cityName"></h2>
             <div class="hourly-forecast-container">
                 <canvas id="myChart" width="400" height="400"></canvas>
