WIP trying to clean up code

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </main>
     <footer>
         <p>	&copy; Your weather reporter Michelle Radomski</p>
+        <span id="icon-license">Some icons provided by <a href="https://icons8.com" target="_blank">icons8</a></span>
     </footer>
 
 <script type="module" src="script.js"></script>
